Since we've introduced block support for border and background color, the default and solid block styles were, aside from the text alignment, redundant. So we have removed them. To compensate for the alignment, this commit adds a text alignment block control. Deprecated blocks will still have the `is-style-solid-class`, so we keep the styles targeting it, and also ensure that we set the new attribute `textAlign` to "left" when it's present.

--- a/packages/block-library/src/pullquote/style.scss
+++ b/packages/block-library/src/pullquote/style.scss
@@ -1,7 +1,7 @@
 .wp-block-pullquote {
 	margin: 0 0 1em 0;
 	padding: 3em 0;
-	text-align: center;
+	text-align: center; // Default text-alignment is left.
 
 	p,
 	blockquote,
@@ -9,6 +9,8 @@
 		color: inherit;
 	}
 
+	&.has-text-align-left,
+	&.has-text-align-right,
 	&.alignleft,
 	&.alignright {
 		max-width: $content-width / 2;
@@ -32,6 +34,17 @@
 	}
 }
 
+// Ensure that we are reasonably specific to override theme defaults.
+.wp-block-pullquote.has-text-align-left {
+	text-align: left;
+}
+
+// Ensure that we are reasonably specific to override theme defaults.
+.wp-block-pullquote.has-text-align-right {
+	text-align: right;
+}
+
+// .is-style-solid-color is deprecated.
 .wp-block-pullquote:not(.is-style-solid-color) {
 	background: none;
 }
@@ -41,8 +54,6 @@
 	blockquote {
 		margin-left: auto;
 		margin-right: auto;
-		text-align: left;
-
 		max-width: 60%;
 
 		p {
